Fix CSS on 'complete record' button to align correctly

--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -206,6 +206,10 @@
     float: right;
     margin-bottom: 7px;
 
+    .button_to {
+      display: inline-block;
+    }
+
     .review_complete_button {
       background-color: #7ab5da;
     }
